clean up backgrounds, consistency, etc

--- a/JTTD/Base.lproj/Main.storyboard
+++ b/JTTD/Base.lproj/Main.storyboard
@@ -22,6 +22,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ud0-iW-GHD">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="UPj-k8-VzQ">
                                 <rect key="frame" x="67" y="194" width="280" height="142"/>
                                 <subviews>
@@ -34,7 +37,7 @@
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="jason@jason.com" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QD4-Z0-h4v">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QD4-Z0-h4v">
                                                 <rect key="frame" x="0.0" y="36" width="280" height="34"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -54,7 +57,7 @@
                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="123456" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R9l-7C-Ubj">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R9l-7C-Ubj">
                                                 <rect key="frame" x="0.0" y="36" width="280" height="34"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -148,8 +151,12 @@
                             <constraint firstItem="NQR-mh-9oG" firstAttribute="top" secondItem="Qyb-qp-DwT" secondAttribute="bottom" constant="5" id="G5Z-d2-XYT"/>
                             <constraint firstItem="w33-VX-S5z" firstAttribute="top" secondItem="UPj-k8-VzQ" secondAttribute="bottom" constant="60" id="Jy0-uV-rJP"/>
                             <constraint firstItem="w33-VX-S5z" firstAttribute="centerX" secondItem="jbP-NS-Cxe" secondAttribute="centerX" id="OZz-Yt-Rsh"/>
+                            <constraint firstItem="ud0-iW-GHD" firstAttribute="top" secondItem="jbP-NS-Cxe" secondAttribute="top" id="Y3v-KK-acn"/>
+                            <constraint firstAttribute="bottom" secondItem="ud0-iW-GHD" secondAttribute="bottom" id="gVt-H3-hY8"/>
+                            <constraint firstItem="ud0-iW-GHD" firstAttribute="leading" secondItem="jbP-NS-Cxe" secondAttribute="leading" id="gf3-Wn-X3D"/>
                             <constraint firstItem="UPj-k8-VzQ" firstAttribute="centerX" secondItem="jbP-NS-Cxe" secondAttribute="centerX" id="gmB-H1-xkn"/>
                             <constraint firstItem="UPj-k8-VzQ" firstAttribute="top" secondItem="DOy-1B-rJQ" secondAttribute="top" constant="150" id="pxY-dl-931"/>
+                            <constraint firstItem="DOy-1B-rJQ" firstAttribute="trailing" secondItem="ud0-iW-GHD" secondAttribute="trailing" id="sVv-Zh-Wra"/>
                             <constraint firstItem="Qyb-qp-DwT" firstAttribute="centerX" secondItem="jbP-NS-Cxe" secondAttribute="centerX" id="uyk-ey-obk"/>
                             <constraint firstItem="Dba-Az-pxu" firstAttribute="centerX" secondItem="jbP-NS-Cxe" secondAttribute="centerX" id="yCh-hd-NLM"/>
                         </constraints>
@@ -354,16 +361,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Space Plow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpH-bn-VvC">
-                                <rect key="frame" x="50" y="80" width="314.5" height="66"/>
-                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="50"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="90y-hn-Vgh">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Space Flow" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpH-bn-VvC">
+                                <rect key="frame" x="30" y="129" width="354.5" height="69.5"/>
+                                <fontDescription key="fontDescription" name="Zorque-Regular" family="Zorque" pointSize="57"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <size key="shadowOffset" width="4" height="-1"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="60" translatesAutoresizingMaskIntoConstraints="NO" id="Ffm-Kw-ecf">
-                                <rect key="frame" x="67" y="313" width="280" height="270"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="Ffm-Kw-ecf">
+                                <rect key="frame" x="67" y="340" width="280" height="216"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWY-pm-mXl" customClass="GIDSignInButton">
                                         <rect key="frame" x="20" y="0.0" width="240" height="50"/>
@@ -373,7 +383,7 @@
                                         </connections>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjB-Bb-TsE">
-                                        <rect key="frame" x="15" y="110" width="250" height="50"/>
+                                        <rect key="frame" x="15" y="83" width="250" height="50"/>
                                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="Yzh-8A-FA5"/>
@@ -389,7 +399,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Raw-lA-TBE">
-                                        <rect key="frame" x="40" y="220" width="200" height="50"/>
+                                        <rect key="frame" x="40" y="166" width="200" height="50"/>
                                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="200" id="GnH-pq-bUZ"/>
@@ -414,14 +424,19 @@
                         <viewLayoutGuide key="safeArea" id="Rti-Mn-ZQM"/>
                         <color key="backgroundColor" red="0.16078431369999999" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="tpH-bn-VvC" firstAttribute="top" secondItem="Rti-Mn-ZQM" secondAttribute="top" constant="36" id="9qf-OJ-ie8"/>
+                            <constraint firstItem="90y-hn-Vgh" firstAttribute="top" secondItem="CHE-MC-Oa3" secondAttribute="top" id="66u-iK-EF2"/>
+                            <constraint firstItem="tpH-bn-VvC" firstAttribute="top" secondItem="Rti-Mn-ZQM" secondAttribute="top" constant="85" id="9qf-OJ-ie8"/>
+                            <constraint firstItem="90y-hn-Vgh" firstAttribute="trailing" secondItem="Rti-Mn-ZQM" secondAttribute="trailing" id="TEQ-ty-60B"/>
+                            <constraint firstItem="90y-hn-Vgh" firstAttribute="leading" secondItem="Rti-Mn-ZQM" secondAttribute="leading" id="ZIt-kU-zA5"/>
                             <constraint firstItem="Ffm-Kw-ecf" firstAttribute="centerY" secondItem="CHE-MC-Oa3" secondAttribute="centerY" id="eIy-m0-e98"/>
                             <constraint firstItem="Ffm-Kw-ecf" firstAttribute="centerX" secondItem="CHE-MC-Oa3" secondAttribute="centerX" id="fBH-Qp-0HX"/>
                             <constraint firstItem="tpH-bn-VvC" firstAttribute="centerX" secondItem="CHE-MC-Oa3" secondAttribute="centerX" id="qTv-hT-ZnO"/>
+                            <constraint firstAttribute="bottom" secondItem="90y-hn-Vgh" secondAttribute="bottom" id="saR-a1-obE"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="signInButton" destination="VWY-pm-mXl" id="ViB-VZ-xvH"/>
+                        <outlet property="spacePlow" destination="tpH-bn-VvC" id="cJw-G7-HCI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IiF-tS-3NJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
